--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -138,13 +138,17 @@ image::daten:catalogue-overview-list.png[]
 [cols="1,3a"]
 |===
 | material:check_box_outline_blank[]
-| Wähle einen oder mehrere Kataloge. Die Aktionen in der Symbolleiste kannst du so auf mehrere Kataloge gleichzeitig anwenden.
+| Wähle einen oder mehrere Kataloge. So kannst du die Aktionen in der Symbolleiste auf mehrere Kataloge gleichzeitig anwenden.
 
 | *Aktiv*
-| Ist der Katalog aktiv? +
+| Ist der Katalog aktiv? Über den Toggle kannst du den Katalog aktivieren oder deaktivieren. +
 Du kannst hier auch den Katalog aktivieren oder deaktivieren. +
+
 material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert. +
+* material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert.
 material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
+* material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
+// TODO: Link einfügen
 
 | *Name*
 | Der Name des Katalogs
@@ -161,7 +165,7 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 | *Aktionen*
 | In dieser Spalte führst du Aktionen nur für einen Katalog aus.
 
-[cols="2,3"]
+[cols="1a,5a"]
 !===
 ! material:file_download[] *Daten herunterladen*
 ! Exportiere die Daten manuell in eine Datei.
@@ -179,14 +183,25 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 ! material:history[] *Katalog-Version wiederherstellen*
 ! Stelle eine frühere Version des Katalogs wieder her. Die letzten 100 Versionen des Katalogs sind verfügbar.
 
+[.collapseBox]
+.Wie stellt man eine andere Katalogversion wieder her?
+--
+include::partial$catalogues-manage.adoc[tag=reset-catalogue]
+--
 
 ! material:delete[] *Löschen*
 ! Lösche den Katalog.
+
+[.collapseBox]
+.Wie löscht man einen Katalog?
+--
+include::partial$catalogues-manage.adoc[tag=delete-catalogue]
+--
 !===
 |===
 
 [#overview-customise]
-=== Liste individuell gestalten
+=== Katalogliste individuell gestalten
 
 Du kannst die Liste an deine Bedürfnisse anpassen.
 
