--- a/docs/de-de/modules/auftraege/pages/order-statuses.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-statuses.adoc
@@ -10,7 +10,7 @@ Spiele deine Auftragsabwicklung einmal grob durch und überlege dir, wann du Auf
 [TIP]
 .Berechtigungen beachten
 ======
-Beachte, dass dir in Dropdown-Listen etc. nur die *Shops* und *Auftragsstatus* angezeigt werden, die für dein Benutzerkonto freigegeben wurden. Wenn du einen Status nicht siehst, fehlt dir wahrscheinlich die Berechtigung für den Status. Berechtigungen können durch Admin-Benutzer:innen vergeben werden.
+Beachte, dass dir in Dropdown-Listen etc. nur die *Webshops* und *Auftragsstatus* angezeigt werden, die für dein Benutzerkonto freigegeben wurden. Wenn du einen Status nicht siehst, fehlt dir wahrscheinlich die Berechtigung für den Status. Berechtigungen können durch Admin-Benutzer:innen vergeben werden.
 ======
 
 [#preselected-statuses]
@@ -187,7 +187,7 @@ Spalten konfigurieren:
 |Zeigt die Farbe des Auftragsstatus an.
 
 | *Name*
-|Zeigt den Namen des Auftragsstatus an. Wenn du die Umschaltfläche *Status-ID in Statusname anzeigen* aktiviert hast (material:toggle_on[]), wird die ID ebenfalls angezeigt.
+|Zeigt den Namen des Auftragsstatus an. Wenn du die Umschaltfläche *Status-ID im Statusnamen anzeigen* aktiviert hast (material:toggle_on[]), wird die ID ebenfalls angezeigt.
 
 | *Name (Sprache)*
 |Zeigt den Statusnamen für die in Klammern angegebene Sprache an. Wähle hier die Sprachen, die du benötigst.
@@ -226,8 +226,8 @@ Sichtbarkeit ändern:
 |===
 |Einstellung |Erläuterung
 
-| *Shop-Sichtbarkeit*
-|Wähle aus der Dropdown-Liste, ob der Auftragsstatus im Shop sichtbar sein soll. //plentyShop LTS??
+| *Sichtbarkeit im Webshop*
+|Wähle aus der Dropdown-Liste, ob der Auftragsstatus im Webshop sichtbar sein soll.
 
 | *Sichtbarkeit in Nachbestellungen*
 |Wähle aus der Dropdown-Liste, ob der Auftragsstatus in Nachbestellungen sichtbar sein soll.
@@ -266,6 +266,7 @@ Status löschen:
 . Führe die Suche (material:search[]) aus, um Auftragsstatus anzuzeigen.
 . Setze für einen oder mehrere Status ein Häkchen (material:check_box[]).
 . Klicke oben auf die Funktion *Status löschen* (material:delete[]). +
+icon:map-signs[] *_Oder:_* Klicke rechts in der Zeile eines Status auf *Löschen* (material:delete[]), um nur diesen Status zu löschen. +
 → Das Fenster *Status löschen* wird geöffnet.
 . Wenn du dir sicher bist, dass du alle gewählten Status löschen möchtest, bestätige die Sicherheitsabfrage und klicke auf *Status löschen* (material:delete[role=red]). +
 → Die Status werden gelöscht.
@@ -294,7 +295,7 @@ Neuen Status erstellen:
 |Gib eine Statusnummer (z.B. 2.5) ein. Stelle sicher, dass dieser Status einmalig ist. Wenn der eingegebene Status bereits existiert, wird eine Fehlermeldung angezeigt. +
 Dies ist ein Pflichtfeld.
 
-| *Name (Deutsch)* //Standard?
+| *Name in Systemsprache (Sprache)*
 |Gib einen Namen für den neuen Status ein. Die Sprache, in der du eingeloggt bist, wird im Eingabefeld angezeigt. +
 Dies ist ein Pflichtfeld.
 
@@ -302,7 +303,7 @@ Dies ist ein Pflichtfeld.
 |Wähle eine Farbe für den neuen Status. Gib dazu entweder einen HEX-Code ein oder wähle Werte für RGB (Red, Green, Blue) bzw. HSL (Schattierung, Sättigung und Helligkeit).
 
 | *Sichtbarkeit*
-|Wähle, ob der neue Status im Shop, in Nachbesellungen oder in Umbuchungen sichtbar sein soll.
+|Wähle, ob der neue Status im Webshop, in Nachbesellungen oder in Umbuchungen sichtbar sein soll.
 
 |===
 
