--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -83,7 +83,7 @@ Einen Katalog löschen::
 --
 //tag::delete-catalogue[]
 [.instruction]
-Kataloge löschen:
+Einen Katalog löschen:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
