add translation and english screenshots

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -489,10 +489,7 @@ Tabellenansicht: im oberen Bereich werden alle gefundenen Konversationen als Tab
 Listenansicht: im linken Bereich werden alle gefundenen Konversationen als Liste angezeigt (keine (Tabellen-)Überschriften). Die ausgewählte Konversation mit allen darin enthaltenen Nachrichten wird im oberen rechten Bereich angezeigt und der Editor zum Beantworten der Nachricht unten rechts.
 ////
 
-//// 
-TODO: einfügen?! 
-
-
+////
 [#zuordnungsparameter]
 == Nachrichten im Messenger zuordnen
 
@@ -500,43 +497,43 @@ Nachrichten im Messenger werden nach Stichworten bzw. textlichen Parametern, die
 
 Beachte die Stichworte, die zu einer Zuordnung führen, in <<#table-assignment-messenger>>. Groß- und Kleinbuchstaben spielen _keine_ Rolle.
 
+// TODO: Ist die emailadresse kein zuordnungsparameter?
+
 [[table-assignment-messenger]]
 .Zuordnungsparameter und mögliche Schreibweisen
 [cols="1,3"]
 |====
 |Parameter |Mögliche Schreibweisen
 
-//| *E-Mail-Adresse*
-//|beispiel@mail.de
+| *E-Mail-Adresse*
+|beispiel@mail.de
 
-// TODO: Ist die emailadresse kein zuordnungsparameter?
-
-//| *Ticket-ID*
-//|Ticket / ID / Nr / No / Nummer / number + Zahl +
-//Beispiele: +
-//Ticket-ID: 123 +
-//Ticket id 123 +
-//TicketID &#35;123 +
-//ID: &#35;123 +
-//ID: 123 +
-//Erlaubte Zeichen: +
-//Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute, runde Klammern, eckige Klammern
+| *Ticket-ID*
+|Ticket / ID / Nr / No / Nummer / number + Zahl +
+Beispiele: +
+Ticket-ID: 123 +
+Ticket id 123 +
+TicketID &#35;123 +
+ID: &#35;123 +
+ID: 123 +
+Erlaubte Zeichen: +
+Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute, runde Klammern, eckige Klammern
 
 |Conversation:
 |conversation|conversations|konversation|konversationen +
 uuid|id|nr|nummer|number|no|:
 
-//| *Kundendaten*
-//|Kunden-ID bzw. Kunden-Nr.: Kunde / Customer + ID / Nr / No / Nummer / number + Zahl +
-//Kunden-Name: Kunden / Customer + Name + Zahl +
-//Beispiele: +
-//Kunden-ID: 123 +
-//Kunden ID 123 +
-//Kunden id 123 +
-//KundenID123 +
-//Kundennummer 123 +
-//Erlaubte Zeichen: +
-//Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
+| *Kundendaten*
+|Kunden-ID bzw. Kunden-Nr.: Kunde / Customer + ID / Nr / No / Nummer / number + Zahl +
+Kunden-Name: Kunden / Customer + Name + Zahl +
+Beispiele: +
+Kunden-ID: 123 +
+Kunden ID 123 +
+Kunden id 123 +
+KundenID123 +
+Kundennummer 123 +
+Erlaubte Zeichen: +
+Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
 
 |Kunden:
 |(kunde|kunden|customer)(id|no|:|.|=|-|#) +
@@ -544,15 +541,15 @@ uuid|id|nr|nummer|number|no|:
 
 // TODO: soll der name hier auch mit aufgenommen werden?
 
-//| *Auftrags-ID*
-//|Auftrag(s) / Order + ID / Nr / No + Zahl +
-//Beispiele: +
-//Auftrags-ID: 123 +
-//Auftrag ID 123 +
-//AuftragsID123 +
-//Order id 123 +
-//Erlaubte Zeichen: +
-//Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
+| *Auftrags-ID*
+|Auftrag(s) / Order + ID / Nr / No + Zahl +
+Beispiele: +
+Auftrags-ID: 123 +
+Auftrag ID 123 +
+AuftragsID123 +
+Order id 123 +
+Erlaubte Zeichen: +
+Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
 
 |Order:
 |(auftrag|auftrags|order)(id|nr|no|:|.|=|-|#)
@@ -560,20 +557,19 @@ uuid|id|nr|nummer|number|no|:
 |AmazonOrder:
 |(Bestellnummer|Bestellung|Commande|Order|Pedido|Ordine)(|:|#|ID)
 
-//| *Rechnungs-Nr.*
-//|Rechnung(s) / invoice + ID / Nr / No / Nummer / number + Zahl +
-//Beispiele: +
-//Rechnung-ID: 123 +
-//Rechnung ID 123 +
-//Invoice No 123 +
-//Erlaubte Zeichen: +
-//Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
+| *Rechnungs-Nr.*
+|Rechnung(s) / invoice + ID / Nr / No / Nummer / number + Zahl +
+Beispiele: +
+Rechnung-ID: 123 +
+Rechnung ID 123 +
+Invoice No 123 +
+Erlaubte Zeichen: +
+Leerzeichen, Punkt, Doppelpunkt, Minuszeichen, Gleichheitszeichen, Raute
 
 |Rechnung:
 |(kunden|customer)(nr|nummer|number|:|.|=|-|#)
 
 |====
-
 ////
 
 [#kontextmenue]
@@ -789,15 +785,15 @@ In diesem Beispiel siehst du eine Nachricht mit erfassten Minuten, bei der die O
 .Nachricht mit erfassten und freien Minuten in der Übersicht
 image::crm:messenger-beispiel-freiminuten.png[width=640, height=360]
 
-In dieser Nachricht sieht man von links nach rechts die folgenden Informationen:
+In dieser Nachricht sind von links nach rechts die folgenden Informationen sichtbar:
 
 * Absender:in der Nachricht
 * Datum und Uhrzeit der gesendeten Nachricht
 * Zugewiesene Tags (in diesem Beispiel heißt das Tag "Messenger")
 * Das Symbol material:av_timer[] zeigt an, dass Minuten erfasst wurden. +
-→ Wenn es sich um eine <<#beispiel-erfasste-minuten-bezahlt, Nachricht mit bezahlten Minuten>> handelt, wird hier noch ein Kreditkarten-Symbol angezeigt.
+→ Wenn es sich um eine <<#beispiel-erfasste-minuten-bezahlt, Nachricht mit bezahlten Minuten>> handelt, wird hier noch das Kreditkarten-Symbol (material:credit_card[]) angezeigt.
 * Am Ende der Zeile steht die Anzahl der erfassten Minuten.
-* In der zweiten Zeile sieht man den Inhalt der Nachricht.
+* In der zweiten Zeile ist der Inhalt der Nachricht sichtbar.
 
 [#beispiel-erfasste-minuten-bezahlt]
 === Beispiel einer Nachricht mit erfassten und bezahlten Minuten
@@ -808,7 +804,7 @@ In diesem Beispiel siehst du eine Nachricht mit erfassten Minuten, bei der die O
 .Nachricht mit erfassten und bezahlten Minuten in der Übersicht
 image::crm:messenger-beispiel-bezahlte-minuten.png[width=640, height=360]
 
-In dieser Nachricht sieht man von links nach rechts die folgenden Informationen:
+In dieser Nachricht sieht sind von links nach rechts die folgenden Informationen sichtbar:
 
 * Absender:in der Nachricht
 * Datum und Uhrzeit der gesendeten Nachricht
@@ -820,7 +816,7 @@ In dieser Nachricht sieht man von links nach rechts die folgenden Informationen:
 * Das Symbol material:credit_card[] zeigt an, dass die Option *Bezahlte Minuten* aktiviert wurde. +
 → Im Gegensatz zu einer <<#beispiel-erfasste-minuten-frei, Nachrichten mit Freiminuten>> wird hier das Kreditkarten-Symbol angezeigt.
 * Am Ende der Zeile steht die Anzahl der erfassten Minuten.
-* In der zweiten Zeile sieht man den Inhalt der Nachricht.
+* In der zweiten Zeile ist der Inhalt der Nachricht sichtbar.
 
 [#einzelne-nachricht-bearbeiten]
 == Einzelne Nachricht bearbeiten
@@ -1030,7 +1026,7 @@ Die xref:payment:beta-zahlungen-verwalten-neu.adoc#[Zahlung] hat eine direkte Ve
 // TODO: heißt es noch so? oder heißt es jetzt "Bezahlte Minuten"?
 
 |[#intable-new-messages-subscribed]*Abonniert*
-|In der Spalte material:notifications[] wird durch das Symbol material:done[] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+|In der Spalte material:notifications[] wird durch das Symbol material:done[] angezeigt, ob die Konversation <<#konversation-abonnieren, abonniert>> wurde.
 
 |[#intable-new-messages-context-menu]*Kontextmenü*
 |Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
