some more updates for messenger

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -769,12 +769,14 @@ Minuten erfassen:
 . Im Feld *Minuten* kannst du den Wert ggf. anpassen.
 . Wähle (material:radio_button_checked[role=skyBlue]), ob es sich um *Freiminuten* oder um *Bezahlte Minuten* handelt.
 . Wähle ggf. Tags aus der Liste.
-. Klicke auf *ERFASSEN UND SPEICHERN*. +
-*_Hinweis:_* Wenn du statt der Option *Freiminuten* die Option *Bezahlte Minuten* gewählt hast, ändert sich die Schaltfläche in *ABRECHNEN UND SPEICHERN*.
+. Klicke auf *ERFASSEN UND SPEICHERN*.
 
 [[image-messenger-capture-minutes-window]]
 .Minuten erfassen
 image::crm:messenger-minuten-erfassen.png[width=640, height=360]
+
+[TIP]
+Wenn du statt der Option *Freiminuten* die Option *Bezahlte Minuten* gewählt hast, ändert sich die Schaltfläche von *ERFASSEN UND SPEICHERN* in *ABRECHNEN UND SPEICHERN*.
 
 [#beispiel-erfasste-minuten-frei]
 === Beispiel einer Nachricht mit erfassten und freien Minuten
