--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -742,12 +742,14 @@ Capturing minutes:
 . You can adjust the value in the *Minutes* field, if needed.
 . Select (material:radio_button_checked[role=skyBlue]) whether it’s about *Free minutes* or *Paid minutes*.
 . Select tags from the list, if needed.
-. Click on *CAPTURE AND SAVE*. +
-*_Note:_* If you select the option *Paid minutes* instead of the option *Free minutes*, the button changes to *BILL AND SAVE*.
+. Click on *CAPTURE AND SAVE*.
 
 [[image-messenger-capture-minutes-window]]
 .Capturing minutes
 image::crm:messenger-capture-minutes.png[width=640, height=360]
+
+[TIP]
+If you select the option *Paid minutes* instead of the option *Free minutes*, the button changes from *CAPTURE AND SAVE* to *BILL AND SAVE*.
 
 [#example-captured-minutes-free]
 === Example of a message with captured and free minutes
