--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -103,7 +103,7 @@
 *** xref:crm:kontakt-bearbeiten.adoc[Kontakt bearbeiten]
 ** xref:crm:schnellsuche.adoc[Schnellsuche]
 ** xref:crm:firmen.adoc[Firmen]
-** xref:crm:messenger.adoc[Messenger]
+** xref:crm:messenger-testphase.adoc[Messenger (Testphase)]
 ** xref:crm:emailbuilder-testphase.adoc[EmailBuilder (Testphase)]
 ** xref:crm:e-mails-versenden.adoc[E-Mails]
 ** xref:crm:op-liste.adoc[Offene Posten]
