--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1283,6 +1283,8 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 * <<#variablen-ticket, Ticket>>
 
+* <<#variablen-messenger, Messenger>>
+
 [#variablen-auftrag]
 ==== Variablen: Auftrag allgemein
 
@@ -2466,6 +2468,45 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 |Verlinkt zum Ticket im Bereich *Mein Konto* des Kunden. Kund:innen können dann dort die Nachricht lesen und direkt eine Antwortnachricht eingeben und versenden. +
 Beachte dazu das Kapitel xref:crm:ticketsystem-nutzen.adoc#5500[Tickets im Mein Konto-Bereich erstellen] auf der Handbuchseite xref:crm:ticketsystem-nutzen.adoc#[Ticketsystem].
 | `ticket.formattedUrl.url`
+
+|====
+
+[#variablen-messenger]
+==== Variablen: Messenger
+
+[[table-variables-messenger]]
+.Variablen in der Kategorie *Messenger*
+[cols="2,5,2"]
+|====
+|Name der Variable |Erläuterung |Twig expression
+
+| `Inhalt der Nachricht`
+|
+| `messenger.message \| raw`
+
+| `ID der Konversation`
+|Dient als eindeutiges Kennzeichen, damit die Nachricht immer korrekt zugeordnet werden kann. Daher sollte diese Variable nicht aus der Vorlage entfernt werden.
+| `messenger.conversationId`
+
+| `Hat abgerechnte Nachrichten`
+|
+| `messenger.metaData.timeCapture.chargeable ? trans('module_mail_templates::Widget.confirm', [], params.lang) : trans('module_mail_templates::Widget.notConfirm', [], params.lang)`
+
+| `Minuten der Nachricht`
+|
+| `messenger.metaData.timeCapture.minutes`
+
+| `Vorschau der Nachricht`
+|
+| `messenger.preview`
+
+| `Betreff der Nachricht`
+|
+| `messenger.title`
+
+| `ID der Nachricht`
+|
+| `messenger.uuid`
 
 |====
 
