--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -5,10 +5,6 @@
 :page-index: false
 :id: IAGOJV9
 
-Diese Seite ist nicht Teil des Handbuchs. Aber falls du trotzdem auf dieser Seite gelandet bist: Hallo und herzlich willkommen. Diese Seite ist nur eine Testseite, auf der wir Handbuch-Formatierungen ausprobieren - damit unser Handbuch immer besser wird.
+Diese Seite ist nicht Teil des Handbuchs. Aber falls du trotzdem auf dieser Seite gelandet bist: Hallo und herzlich willkommen. Diese Seite ist nur eine Testseite, auf der wir Handbuch-Formatierungen ausprobieren - damit unser Handbuch immer schöner wird.
 
-
-
-== Ab hier geht es los!
-
-Spannend, was?
+image::maerkte:spielwiesenbild.png[]
