Updated translation of Shopify app

--- a/docs/en-gb/modules/external-online-shops/pages/shopify-app.adoc
+++ b/docs/en-gb/modules/external-online-shops/pages/shopify-app.adoc
@@ -1,7 +1,7 @@
 = Connecting Shopify
 :keywords: Shopify, plentymarkets app, shopify assistant, shopify shops, connect shopify, link shopify
 :description: Learn how to connect your plentymarkets account with Shopify in order to synchronise your data.
-:author: team-import-export
+:author: team-plenty-channel
 
 On this page, you will learn how to connect your plentymarkets account with Shopify so you can synchronise your data between both systems. The two assistants will guide you through all required steps so you can start right away.
 
@@ -19,7 +19,7 @@ To register with Shopify, follow the app installation steps below.
 Registering with Shopify:
 
 . Go to link:https://www.shopify.com/signup[Shopify^].
-. Go to *Admin > Apps*.
+. Go to *Admin » Apps*.
 . Click on *Customize your store*.
 . Search for the *plentymarkets* app. +
 → The plentymarkets app is shown.
@@ -46,15 +46,16 @@ The following chapters walk you through the integration of Shopify via the usage
 The *Shopify Configuration* assistant will guide you through the required steps to set up your Shopify connection. <<table-shopify-configuration-assistant>> shows which settings you can carry out in the individual steps of the assistant. You can find the assistant in the *Setup » Assistants* menu in the Omni-Channel area.
 
 [.instruction]
-Using the Shopify Configuration assistant:
+Using the *Shopify Configuration* assistant:
 
 . Go to *Setup » Assistants » Omni-Channel*.
 . Click on the *Shopify Configuration* assistant.
 . Click on the available configuration. +
 → The assistant opens.
-. Follow the instructions on the screen. If you need additional information about one of the options, expand the info box shown below this instruction (icon:chevron-down[role="darkGrey"]).
-. Check the summary for any possible errors and click on icon:check[role="green"] *Finalise*. +
+. Follow the instructions on the screen. If you need additional information about one of the options, expand the info box below this description (icon:chevron-down[role="darkGrey"]).
+. If everything is as it should be, click on icon:check[role="green"] *Finalise*. +
 → The assistant is finished and the connection to Shopify has been set up.
+
 
 [.collapseBox]
 .Options in the assistant
@@ -64,11 +65,11 @@ Using the Shopify Configuration assistant:
 [width="100%"]
 [cols="1,2a"]
 |======
-|*Setting* |*Explanation*
+|Setting |Explanation
 
 2+| Step *Shopify Connection*
 
-| Shopify Connection
+| Shopify connection
 | Shows the Shopify hostname, the connected plentymarkets client and the connection status. No action is required in this step.
 
 2+| Step *Item management*
@@ -81,11 +82,11 @@ a| Item management
 
 | Stock management
 | Configure how the import and export of stock should be handled. Item prices are included here, too. +
-*_Note:_* Import and export processes for stock and prices cannot be both active at the same time.
+*_Note:_* Import and export processes for stock cannot be both active at the same time.
 
 2+| Step *Warehouse to location mapping*
 
-Link your plentymarkets warehouses to Shopify locations. You can link multiple plentymarkets warehouses to one and the same Shopify location. The selection in this step will affect stock imports and exports as well as order fulfilment notifications to Shopify.  +
+Link your plentymarkets warehouses to Shopify locations. You can link multiple plentymarkets warehouses to one and the same Shopify location. The selection in this step will affect stock imports and exports as well as order fulfilment notifications to Shopify. +
 *_Note:_* Only stock from mapped warehouses and locations will be exported and imported.
 
 2+| Step *Order management*
@@ -101,9 +102,8 @@ Link your plentymarkets warehouses to Shopify locations. You can link multiple p
 
 2+| Step *Shipping profiles mapping*
 
-| Shipping profile mapping
-| Link Shopify and plentymarkets shipping profiles. By doing so, shipping profiles for imported orders will automatically be determined for imported orders.
-For each existing Shopify profile you can choose a corresponding profile from plentymarkets.
+| Shipping profiles mapping
+| Link Shopify and plentymarkets shipping profiles. By doing so, shipping profiles for imported orders will automatically be determined for imported orders. For each existing Shopify profile you can choose a corresponding profile from plentymarkets.
 
 |======
 --
@@ -111,19 +111,18 @@ For each existing Shopify profile you can choose a corresponding profile from pl
 [#50]
 === Using the Input field mapping assistant
 
-The *Input field mappings* assistant helps you to create custom mappings between Shopify input fields and plentymarkets data fields. These mappings will then be used for the item export. <<table-input-field-mapping>> shows which settings you can carry out in the individual steps of the assistant. You can find the assistant in the *Setup » Assistants* menu in the Omni-Channel area.
+The *Input field mappings* assistant helps you to create custom mappings between Shopify input fields and plentymarkets data fields. These mappings will then be used for the item export. <<table-input-field-mapping>> shows which settings you can carry out in the individual steps of the assistant. You can find the Input field mapping assistant in the *Setup » Assistants* menu in the Omni-Channel area.
 
 [.instruction]
-Using the input field mapping assistant:
+Using the *Input field mapping* assistant:
 
 . Go to *Setup » Assistants » Omni-Channel*.
 . Click on the *Input field mappings* assistant.
 . Click on the available configuration. +
 → The assistant opens.
-. Follow the instructions on the screen. Note <<table-input-field-mapping>> if you need additional information about one of the options.
-. Check the summary for any possible errors and click on icon:check[role="green"] *Finalise*. +
+. Follow the instructions on the screen. If you need additional information about one of the options, expand the info box below this description (icon:chevron-down[role="darkGrey"]).
+. If everything is as it should be, click on icon:check[role="green"] *Finalise*. +
 → The assistant is finished and the input field mappings have been created.
-
 
 [.collapseBox]
 .Options in the assistant
@@ -133,12 +132,12 @@ Using the input field mapping assistant:
 [width="100%"]
 [cols="1,2a"]
 |======
-|*Setting* |*Explanation*
+|Setting |Explanation
 
 2+| Step *Shopify account*
 
 | Shopify account
-| Shows for which user account you are carrying out the settings. No action is required here.
+| Shows for which user account you are carrying out the settings. No action is required in this step.
 
 2+| Step *Existing input field mappings*
 
@@ -149,13 +148,15 @@ Using the input field mapping assistant:
 
 | Creating a new field mapping
 | Select the Shopify field that contains the exported data. If you do not want to create a new mapping at this point, leave this field empty. +
-*_Note:_* If you want to create multiple field mappings, you have to run the assistant once for each newly created field mapping. Choosing a Metafield will trigger a new assistant step.
+*_Note:_* If you want to create multiple field mappings, you have to run the assistant once for each newly created field mapping.  Choosing a meta field will trigger a new assistant step.
 
 
 2+| Step *Metafield configuration* (optional)
 
 | Metafield configuration
 | This step is only available if you choose the option *Metafield* in the *Create new field mapping* step. Specify the namespace and the name of the Shopify Metafield. +
+
+The namespace is a container for a Metafield set. You can assign multiple Metafields to a namespace container. The maximum character length of the namespace is 20 characters. +
 
 *_Note:_* Shopify Metafields are not visible in the Shopify back end without a specific Shopify app. For more details regarding Shopify Metafields, consult the link:https://help.shopify.com/en/manual/metafields[Shopify Help Center^] and enter the keyword *Metafield*.
 
@@ -168,8 +169,7 @@ Using the input field mapping assistant:
 2+| Step *Property* (optional)
 
 | Property
-| This step is only available if you choose the option *Property* in the *plentymarkets source input field* step.
-Select the property you want to use as export data source.
+| This step is only available if you chose the option *Property* in the *plentymarkets source input field* step. Select the property you want to use as export data source.
 
 |======
 --
@@ -182,13 +182,14 @@ The following chapters list all additional settings that you may want to carry o
 [#70]
 === Setting up the variation stock limitation
 
-When exporting stock, the stock *Limitation* is also exported to Shopify. Depending on the selected *Limitation*, the Shopify checkbox *Continue selling when out of stock* is activated or deactivated. For further information see <<table-stock-limitation>>.
+When exporting stock, the stock *limitation* is also exported to Shopify. +
+Depending on the selected *limitation*, the Shopify checkbox *Continue selling when out of stock* is activated or deactivated. For further information, refer to <<table-stock-limitation>>.
 
 [[table-stock-limitation]]
 .Stock limitation options
 [cols="1,2"]
 |====
-| *Limitation in plentymarkets* | *Continue selling when out of stock*
+| *Limitation* | *Continue selling when out of stock*
 
 | *None*
 | Yes
@@ -224,7 +225,7 @@ Due to GDPR specifications, the following policies for customer accounts and ord
 |*Scenario* |*Explanation*
 
 | *Customer is imported as guest*
-| If the customer doesn't have a plentymarkets account, the authenticity of the customer isn't guaranteed by either part, even if the contact details on several orders are identical. +
+| If the customer doesn't have a plentymarkets account, the authenticity of the customer isn't guaranteed by either part, even if the contact details on several orders are identical.  +
 
 *Tip:* You can convert contacts of the type *Guest* to regular contacts if required. For more information, see the xref:crm:quick-search.adoc#convert-guest-account[quick search] manual page.
 
