ADD changes status ui

--- a/docs/de-de/modules/auftraege/pages/order-statuses.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-statuses.adoc
@@ -238,7 +238,7 @@ Sichtbarkeit ändern:
 |===
 
 [#change-colour]
-== Farbe ändern
+=== Farbe ändern
 
 Die Farbe für einen Auftragsstatus kannst du jederzeit anpassen. Um die Farbe für einen oder mehrere Auftragsstatus zu ändern, gehe wie im Folgenden beschrieben vor.
 
