--- a/docs/de-de/modules/_includes/partials/crons.adoc
+++ b/docs/de-de/modules/_includes/partials/crons.adoc
@@ -1,6 +1,9 @@
+:author: team-plenty-channel
+
 [.collapseBox]
 .Was ist ein Cron?
 --
+
 Ein Cron dient dazu, Prozesse zeitbasiert auszuführen. Das Ausführen erfolgt in einzelnen Cronjobs.
 
 Cronjobs sind wiederkehrende Aufgaben (Jobs), die automatisch in festen Intervallen ausgeführt werden. Diese Intervalle werden normalerweise in Minuten angegeben. Ein Cron 60 wird zum Beispiel alle 60 Minuten ausgeführt.
@@ -10,4 +13,5 @@ Cronjobs sind wiederkehrende Aufgaben (Jobs), die automatisch in festen Interval
 Fun Fact: Cron steht für "Command Run On Notice". Der Begriff spielt aber auch auf Chronos an, den griechischen Gott der Zeit.
 
 Warum du wissen musst, was ein Cron ist? Eigentlich musst du das gar nicht wissen. Du aktivierst nur den Austausch von Daten in plentymarkets. Der Rest passiert automatisch. Cool, oder?
+
 --
