--- a/docs/de-de/modules/maerkte/pages/best-practices-ebay-faq.adoc
+++ b/docs/de-de/modules/maerkte/pages/best-practices-ebay-faq.adoc
@@ -125,7 +125,7 @@ Vergleiche die Attribute und Attributwerte auf eBay mit denen in plentymarkets. 
 
 Diese Fehlermeldung kann entweder beim automatischen Relisten durch den CronJob ausgegeben werden oder wenn du die Option *Beenden und neu starten* wählst.
 
-include::_includes:page$crons.adoc[]
+include::_includes:partial$crons.adoc[]
 
 Wenn eine dieser Optionen zutrifft, ist es theoretisch möglich, das Ranking des alten Listings zu erhalten und auf das neue Listing zu übertragen. +
 Aber auch hier erwartet eBay, dass sich die bereits verkauften Varianten im beendeten Listing *nicht verändern*. +
