--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -78,7 +78,7 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
   ** *1440* = Export runs once daily.
 * *Debug* = The export has started for debugging purposes.
 
-include::_includes:page$crons.adoc[]
+include::_includes:partial$crons.adoc[]
 
 | *Start time*
 | When was the export started?
@@ -170,20 +170,18 @@ The list of logs is shown on the left. Click on one of the logs to show more det
 | Click to show the data that was exported. The data is shown in JSON format. +
 *_Important:_* Due to the data volume and complexity, the data cannot be shown as a table.
 
-////
-| *Download private export* +
-(material:file_download[])
-| *_Note:_* Use this download if you use a private link. +
-*_Note:_* The download button is only available for *Async* exports. +
+//| *Download private export* +
+//(material:file_download[])
+//| *_Note:_* Use this download if you use a private link. +
+//*_Note:_* The download button is only available for *Async* exports. +
 
-. Click on *Download private export* (material:file_download[]). +
-→ The export starts. +
-*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
-. In the notification centre, click on material:link[] *Download*. +
-*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
-. Save the file on your computer.
-////
+//. Click on *Download private export* (material:file_download[]). +
+//→ The export starts. +
+//*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
+//Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+//. In the notification centre, click on material:link[] *Download*. +
+//*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
+//. Save the file on your computer.
 
 | *Download public export* +
 (material:file_download[])
