--- a/docs/de-de/modules/maerkte/pages/mytoys-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys-einrichten.adoc
@@ -862,7 +862,7 @@ Vorlage für Rücksendescheine anpassen:
 |===
 |Einstellung |Option
 
-include::page$mytoys.adoc[tag=document-settings]
+include::page$mytoys-einrichten.adoc[tag=document-settings]
 |===
 
 [#order-processing]
